add link to release page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
                         <i class="fas fa-download"></i>
                         <span>Download MyFarm</span>
                     </button>
-                    <p class="version-info">Latest version: <span id="latestVersion">Checking...</span></p>
+                    <p class="version-info">
+                        <a href="https://github.com/sh3hz/myfarm/releases" target="_blank" rel="noopener noreferrer" class="releases-link">View all releases</a>
+                    </p>
                 </div>
             </div>
         </main>
